tests/ui/concurrent_cached_max_size_with_disk.stderr
error: `max_size` only applies to the default in-memory store, not `disk = true`
 --> tests/ui/concurrent_cached_max_size_with_disk.rs:9:4
  |
9 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
